# Agent_Framework_Demo

./: .env  README.md  pyproject.toml
dataset/FPS_rules/: chunk_data.json
dataset/ICBU_gss_introduction/: chunk_data.json
demo/: 0_retriever_preprocess.py  1_rag_server.py  agno_demo.ipynb  google_adk_demo.ipynb  openai_sdk_demo.ipynb  pydanticai_demo.ipynb
demo/google_adk_web/: README.md
demo/google_adk_web/rag_agent/: agent.py
demo/multi_agent/: Agno_multiagent_demo.ipynb  pydanticai_multiagent_demo.ipynb
demo/multi_agent/agno_storage/: session_1.json  session_6.json
demo/multi_agent/pydanticai_storage/user_1/: session_1.json
demo/single_agent/: agno_demo.ipynb  google_adk_demo.ipynb  pydanticai_demo.ipynb
demo/single_agent/agno_storage/: session_1.json
