[project]
name = "agent-framework-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.5.3",
    "einops>=0.8.1",
    "google-adk>=1.0.0",
    "hf-xet>=1.1.2",
    "mcp[cli]>=1.9.1",
    "numpy==1.26.4",
    "openai-agents[litellm]>=0.0.16",
    "opensearch-py>=2.8.0",
    "pydantic-ai[logfire]>=0.2.6",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0",
]

[dependency-groups]
dev = [
    "graphviz>=0.20.3",
    "nest-asyncio>=1.6.0",
]
